# Fractal-Explorer

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
includes/: config.h  fractal.h  grid.h  vector2.h
sources/: config.cpp  fractal.cpp  grid.cpp  main.cpp  vector2.cpp
src/: config.cpp  config.hpp  fractal.cpp  fractal.hpp  grid.cpp  grid.hpp  main.cpp  vector2.cpp  vector2.hpp
